syntax = "proto3";

package session.v1;

option go_package = "github.com/louisbranch/duality-engine/api/gen/go/session/v1;sessionv1";

import "session/v1/session.proto";

message StartSessionRequest {
  // The campaign ID to start a session for.
  string campaign_id = 1;

  // Optional free-form name for the session.
  string name = 2;
}

message StartSessionResponse {
  Session session = 1;
}

message ListSessionsRequest {
  // The campaign ID to list sessions for.
  string campaign_id = 1;

  // The maximum number of sessions to return.
  // If zero, the server defaults to 10. The server clamps values above 10 to 10.
  int32 page_size = 2;

  // A page token received from a prior ListSessionsResponse.
  string page_token = 3;
}

message ListSessionsResponse {
  repeated Session sessions = 1;
  string next_page_token = 2;
}

message GetSessionRequest {
  // The campaign ID.
  string campaign_id = 1;

  // The session ID.
  string session_id = 2;
}

message GetSessionResponse {
  Session session = 1;
}
